# Finance-Web-Scrapper

./: .env  .gitignore  daily_scraper.yml  gen-lang-client-0420394233-5715b1079589.json  main.py  pyproject.toml  req.txt
.github/workflows/: main.yml
